fix header h1 align

--- a/widget/css/login.less
+++ b/widget/css/login.less
@@ -275,6 +275,7 @@ background-image: linear-gradient(left, #e9edf0, rgba(241,244,246,0), #e9edf0);
   color: #41444a;
   font-weight: bold;
   border-bottom: 1px solid #DDE3E6;
+  text-align: left;
 }
 
 .popup .panel header a {
